# Expense-Management-System

./: .gitignore  Dockerfile  db.sqlite3  deploy.sh  docker-compose.yml  env.example  my_file.xlsx  pyproject.toml  requirements.txt
.github/workflows/: actions.yml
ExpenseManagement/: asgi.py  settings.py  urls.py  wsgi.py
account/: admin.py  apps.py  decorators.py  dispatch.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
account/migrations/: 0001_initial.py  0002_alter_account_account_no.py  0002_initial.py  0003_fundtransfer.py  0003_fundtransfer_transaction_code.py  0004_alter_accounttype_name.py  0004_fundcheckresponse_fundapproveresponse.py  0005_account_opening_balance.py  0006_alter_fundapproveresponse_fund_transfer_and_more.py  0007_alter_fundtransfer_from_account_and_more.py  0008_fundapproveresponse_fund_checking_response.py  0009_rename_fundapproveresponse_fundapprove_and_more.py  (+8 more)
admin_site/: __init__.py  admin.py  apps.py  utils.py  views.py
bank/: admin.py  apps.py  dispatch.py  forms.py  models.py  signals.py  utils.py
custom_admin/: __init__.py  site.py
deployment/: entrypoint  start-app
expense/: admin.py  apps.py  dispatch.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
expense/api/: filters.py  (+4 more)
fund_history/: admin.py  apps.py  models.py  signals.py
lib/: admin.py  models.py
template/: activities.html  admin-dashboard.html  applied-jobs.html  approval-setting.html  apptitude-result.html  archived-jobs.html  assets-category.html  assets-details.html  assets-new.html  assets-reports.html  assets.html  attance-reports.html  attend-reports.html  attendance-employee.html  attendance-reports.html  attendance.html  blank-page.html  budget-expenses.html  budget-revenues.html  budgets.html  calender.html  candidates.html  categories.html  change-password.html  chat.html  client-profile.html  clients-list.html  clients.html  components.html  compose.html  contacts.html  create-estimate.html  create-invoice.html  cron-setting.html  daily-reports.html  data-tables.html  departments.html  designations.html  edit-estimate.html  edit-invoice.html  (+117 more)
user/: admin.py  forms.py  models.py  views.py
users/: models.py
(+75 files in other folders)
